<resources>

    <string name="app_name">CyclApp_1_1</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_exit">Exit</string>
    <string name="title_activity_main">CycleApp</string>
    <string name="map_name">Map</string>
    <string name="preferences_name">Settings</string>
    <string name="location_label">not found &#8230;</string>
    <string name="find_location_title">Your Location is:</string>
    <string name="view_map_button_label">View Map</string>
    <string name="find_speed_title">Your Speed is:</string>
    <string name="speed_label">not found &#8230;</string>
    <string name="start_stop_button_label">Start</string>
    <string name="pause_button_label">Pause</string>
    <string name="distance_so_far_title">Distance travelled</string>
    <string name="distance_so_far_label">Press start!</string>
    <string name="timer_title">Trip Time</string>
    <string name="timer_label">Press start!</string>

</resources>