<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="25dip"
        android:text="@string/find_location_title"
        android:textSize="20sp"
        tools:context=".MainActivity" />

    <TextView
        android:id="@+id/location_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="0dip"
        android:text="@string/location_label"
        android:textSize="10sp"
        tools:context=".MainActivity" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="25dip"
        android:text="@string/find_speed_title"
        android:textSize="20sp"
        tools:context=".MainActivity" />

    <TextView
        android:id="@+id/speed_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="0dip"
        android:text="@string/speed_label"
        android:textSize="14sp"
        tools:context=".MainActivity" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="25dip"
        android:text="@string/distance_so_far_title"
        android:textSize="20sp"
        tools:context=".MainActivity" />

    <TextView
        android:id="@+id/distance_so_far_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="0dip"
        android:text="@string/distance_so_far_label"
        android:textSize="14sp"
        tools:context=".MainActivity" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="25dip"
        android:text="@string/timer_title"
        android:textSize="20sp"
        tools:context=".MainActivity" />

    <TextView
        android:id="@+id/timer_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="0dip"
        android:text="@string/timer_label"
        android:textSize="14sp"
        tools:context=".MainActivity" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="horizontal"
        android:padding="10dip" >

        <Button
            android:id="@+id/start_stop_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/start_stop_button_label" >
        </Button>

        <Button
            android:id="@+id/pause_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/pause_button_label" >
        </Button>
    </LinearLayout>

    <Button
        android:id="@+id/map_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/view_map_button_label" />

    <TextView
        android:id="@+id/output"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" />

</LinearLayout>